--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "graphql-tag": "^2.5.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
+    "react-bootstrap": "^0.32.3",
+    "react-color": "^2.14.1",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.5",
