--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
+    "react-input-autosize": "^2.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.5",
