--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
     "react-input-autosize": "^2.2.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
+    "redux-observable": "^1.0.0",
+    "rxjs": "6.0.0",
     "styled-components": "^3.4.5",
     "tachyons": "^4.11.1"
   },
