--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
-    "redux-observable": "^1.0.0",
-    "rxjs": "6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.5",
     "tachyons": "^4.11.1"
   },
