--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^1.2.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.5.0",
+    "lodash": "^4.17.11",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-bootstrap": "^0.32.3",
