--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^3.0.5",
     "react-input-autosize": "^2.2.1",
     "react-redux": "^5.0.7",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
