--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
     "react-input-autosize": "^2.2.1",
+    "react-markdown": "^4.0.3",
     "react-redux": "^5.0.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
