--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^3.0.5",
     "react-input-autosize": "^2.2.1",
     "react-markdown": "^4.0.3",
+    "react-particles-js": "^2.4.2",
     "react-redux": "^5.0.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
