--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apollo": "^2.1.11",
     "react-bootstrap": "^0.32.3",
     "react-color": "^2.14.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-icons": "^3.0.5",
     "react-input-autosize": "^2.2.1",
