--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "styled-components": "^3.4.5",
     "tachyons": "^4.11.1"
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
